--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "helmet": "^6.1.5"
+    "helmet": "^6.1.5",
+    "mongoose": "^7.1.0"
   }
 }
