--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
+  "type": "module",
   "name": "fcc-task-manager-backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "node --watch build/app.cjs"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^2.0.22"
-  },
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^6.1.5",
     "mongoose": "^7.1.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.4.2"
   }
 }
