--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "mongoose": "^7.1.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^20.12.5",
     "typescript": "^5.4.2"
   }
 }
